[gd_scene load_steps=30 format=3 uid="uid://dwxxwxyy0bkp5"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_gog3v"]
[ext_resource type="Script" path="res://scripts/dialog_manager.gd" id="2_a04k1"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="2_w2tk2"]
[ext_resource type="Resource" uid="uid://lobadbie4yle" path="res://resources/dialogs/Vaelvia.tres" id="3_1f4ra"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="3_63sse"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="3_nbsgn"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="4_eo46b"]
[ext_resource type="Resource" uid="uid://7ose65f355br" path="res://resources/dialogs/Bob.tres" id="4_npn1t"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="4_y3owe"]
[ext_resource type="Resource" uid="uid://bxbcmfi4bjep" path="res://resources/dialogs/AngyGuy.tres" id="5_d0kfo"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="5_vw25s"]
[ext_resource type="Resource" uid="uid://ihlb2vrj43ej" path="res://resources/dialogs/Jay.tres" id="6_ythxk"]
[ext_resource type="Resource" uid="uid://c05l4ruwxisur" path="res://resources/dialogs/PrincessMcBeauty.tres" id="7_q5gsj"]
[ext_resource type="Texture2D" uid="uid://0rkhpmk6rap2" path="res://assets/dialogueninepatch.png" id="8_sj0ku"]
[ext_resource type="AudioStream" uid="uid://bhu3yl0bvasaa" path="res://assets/sounds/wah.wav" id="12_q2kph"]
[ext_resource type="Script" path="res://health_bar.gd" id="14_wi75v"]
[ext_resource type="Texture2D" uid="uid://c13pxiw11ijw" path="res://assets/HeartSpriteSheet.png" id="15_dsx8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2klbr"]

[sub_resource type="Theme" id="Theme_jjprt"]
default_font_size = 16
Panel/styles/panel = SubResource("StyleBoxEmpty_2klbr")
RichTextLabel/colors/default_color = Color(1, 1, 1, 1)

[sub_resource type="RichTextEffect" id="RichTextEffect_s7t2j"]
script = ExtResource("3_nbsgn")

[sub_resource type="RichTextEffect" id="RichTextEffect_afi01"]
script = ExtResource("4_y3owe")

[sub_resource type="RichTextEffect" id="RichTextEffect_iwc1u"]
script = ExtResource("5_vw25s")

[sub_resource type="AtlasTexture" id="AtlasTexture_kwtqm"]
atlas = ExtResource("15_dsx8t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yponu"]
atlas = ExtResource("15_dsx8t")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3ufe"]
atlas = ExtResource("15_dsx8t")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy3ep"]
atlas = ExtResource("15_dsx8t")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sm6h"]
atlas = ExtResource("15_dsx8t")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io2mn"]
atlas = ExtResource("15_dsx8t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1flg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwtqm")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yponu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3ufe")
}],
"loop": false,
"name": &"empty",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy3ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sm6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io2mn")
}],
"loop": false,
"name": &"full",
"speed": 6.0
}]

[node name="Game" type="Control"]
process_mode = 3
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gog3v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueManager" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_force_pass_scroll_events = false
script = ExtResource("2_a04k1")
dialogue_trees = {
"Bob": ExtResource("4_npn1t"),
"Jay": ExtResource("6_ythxk"),
"Princess McBeauty": ExtResource("7_q5gsj"),
"The Old Angy Guy The Real": ExtResource("5_d0kfo"),
"Vaelvia": ExtResource("3_1f4ra")
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/DialogueManager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 54.0
offset_top = 183.0
offset_right = 316.0
offset_bottom = 239.0
texture = ExtResource("8_sj0ku")
region_rect = Rect2(0, 0, 18, 18)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="DialogueBox" type="Panel" parent="CanvasLayer/DialogueManager"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 58.0
offset_top = 183.0
offset_right = 309.0
offset_bottom = 238.0
theme = SubResource("Theme_jjprt")
script = ExtResource("2_w2tk2")
data = ExtResource("3_1f4ra")
hide_portrait = true
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_s7t2j"), SubResource("RichTextEffect_afi01"), SubResource("RichTextEffect_iwc1u")])
max_options_count = 2
options_vertical = true

[node name="DialogueAudioPlayer" type="AudioStreamPlayer" parent="CanvasLayer/DialogueManager"]
unique_name_in_owner = true
stream = ExtResource("12_q2kph")
pitch_scale = 2.0

[node name="HealthBar" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 283.0
offset_bottom = 19.0
script = ExtResource("14_wi75v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(25, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
animation = &"empty"
autoplay = "default"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(42, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(59, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(76, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(93, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(110, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(127, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(144, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(161, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(178, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(195, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D13" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(212, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D14" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(229, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D15" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(246, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D16" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(263, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D17" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(280, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D18" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(297, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D19" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(314, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
autoplay = "default"

[node name="AnimatedSprite2D20" type="AnimatedSprite2D" parent="CanvasLayer/HealthBar"]
position = Vector2(331, 8)
sprite_frames = SubResource("SpriteFrames_m1flg")
animation = &"full"
autoplay = "default"

[node name="FlowersLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 6.0
offset_top = 17.0
offset_right = 71.0
offset_bottom = 40.0
text = "Florids:"

[node name="SwordLevel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 34.0
offset_right = 48.0
offset_bottom = 47.0
text = "Sword level"

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_63sse")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPauseMenu" type="VBoxContainer" parent="CanvasLayer/PauseMenu/CenterContainer" node_paths=PackedStringArray("first_button")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("4_eo46b")
first_button = NodePath("SettingsButton")

[node name="SettingsButton" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/MainPauseMenu"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/MainPauseMenu"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" type="VBoxContainer" parent="CanvasLayer/PauseMenu/CenterContainer" node_paths=PackedStringArray("first_button")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_eo46b")
first_button = NodePath("SettingsBackButton")

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/CenterContainer/SettingsMenu"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PauseMenu/CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(156.45, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="SettingsBackButton" type="Button" parent="CanvasLayer/PauseMenu/CenterContainer/SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back
"

[node name="PlayerHealTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="dialogue_ended" from="CanvasLayer/DialogueManager/DialogueBox" to="." method="_dialog_complete"]
[connection signal="dialogue_ended" from="CanvasLayer/DialogueManager/DialogueBox" to="CanvasLayer/DialogueManager" method="_on_dialogue_box_dialogue_ended"]
[connection signal="dialogue_started" from="CanvasLayer/DialogueManager/DialogueBox" to="CanvasLayer/DialogueManager" method="_on_dialogue_box_dialogue_started"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/CenterContainer/MainPauseMenu/SettingsButton" to="CanvasLayer/PauseMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/CenterContainer/MainPauseMenu/QuitButton" to="CanvasLayer/PauseMenu" method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/PauseMenu/CenterContainer/SettingsMenu/HSlider" to="." method="_volume_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/CenterContainer/SettingsMenu/SettingsBackButton" to="CanvasLayer/PauseMenu" method="_on_settings_back_button_pressed"]
[connection signal="timeout" from="PlayerHealTimer" to="." method="_on_player_heal_timer_timeout"]
